fix(html, css): mobile horizontal scrolling and forms titles

--- a/Desafio 03 (HTML, CSS, TS)/styles/components/forms.css
+++ b/Desafio 03 (HTML, CSS, TS)/styles/components/forms.css
@@ -16,6 +16,10 @@
             width: 100%;
         }
 
+        h1{
+            text-align: center;
+        }
+
         p.input-container {
             display: flex;
             flex-direction: column;
