--- a/Desafio 03 (HTML, CSS, TS)/styles/layout/main.css
+++ b/Desafio 03 (HTML, CSS, TS)/styles/layout/main.css
@@ -15,6 +15,6 @@ main {
     }
 
     > *{
-        margin: 0 20px;
+        padding: 0 20px;
     }
 }
